MODON MRE BPDEV/force-app/main/default/objects/Lead_Event__c/fields/ADDED_BY__c.field-meta.xml
<CustomField>
    <fullName>ADDED_BY__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ADDED_BY</label>
    <length>100</length>
    <type>Text</type>
</CustomField>