MODON MRE BPDEV/force-app/main/default/objects/Lead_Event__c/fields/Broker_Email__c.field-meta.xml
<CustomField>
    <fullName>Broker_Email__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Broker Email</label>
    <type>Email</type>
</CustomField>