MODON MRE BPDEV/force-app/main/default/objects/Lead_Event__c/fields/Broker_Phone__c.field-meta.xml
<CustomField>
    <fullName>Broker_Phone__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Broker Phone</label>
    <type>Phone</type>
</CustomField>