MODON MRE BPDEV/force-app/main/default/objects/Lead_Event__c/fields/CampaignId__c.field-meta.xml
<CustomField>
    <fullName>CampaignId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CampaignId</label>
    <length>100</length>
    <type>Text</type>
</CustomField>