MODON MRE BPDEV/force-app/main/default/objects/Lead_Event__c/fields/Checkin_Status__c.field-meta.xml
<CustomField>
    <fullName>Checkin_Status__c</fullName>
    <label>Checkin Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>YES</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>