MODON MRE BPDEV/force-app/main/default/objects/Lead_Event__c/fields/Checkin_Time__c.field-meta.xml
<CustomField>
    <fullName>Checkin_Time__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Checkin Time</label>
    <length>100</length>
    <type>Text</type>
</CustomField>