MODON MRE BPDEV/force-app/main/default/objects/Lead_Event__c/fields/Customer_Type__c.field-meta.xml
<CustomField>
    <fullName>Customer_Type__c</fullName>
    <defaultValue>&quot;VIP Client&quot;</defaultValue>
    <encryptionScheme>None</encryptionScheme>
    <label>Customer Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>