MODON MRE BPDEV/force-app/main/default/objects/Lead_Event__c/fields/EventID__c.field-meta.xml
<CustomField>
    <fullName>EventID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>EventID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>