MODON MRE BPDEV/force-app/main/default/objects/Lead_Event__c/fields/EventName__c.field-meta.xml
<CustomField>
    <fullName>EventName__c</fullName>
    <defaultValue>&quot;Wadeem Sales Launch&quot;</defaultValue>
    <encryptionScheme>None</encryptionScheme>
    <label>EventName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>