MODON MRE BPDEV/force-app/main/default/objects/Lead_Event__c/fields/FirstName__c.field-meta.xml
<CustomField>
    <fullName>FirstName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>First Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>