MODON MRE BPDEV/force-app/main/default/objects/Lead_Event__c/fields/LastName__c.field-meta.xml
<CustomField>
    <fullName>LastName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Last Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>