MODON MRE BPDEV/force-app/main/default/objects/Lead_Event__c/fields/Lead_Source__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source__c</fullName>
    <defaultValue>&quot;VIP Event_Emirates Palace&quot;</defaultValue>
    <encryptionScheme>None</encryptionScheme>
    <label>Lead Source</label>
    <length>150</length>
    <type>Text</type>
</CustomField>