MODON MRE BPDEV/force-app/main/default/objects/Lead_Event__c/fields/LeadID__c.field-meta.xml
<CustomField>
    <fullName>LeadID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>LeadID</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Lead Events</relationshipLabel>
    <relationshipName>Lead_Events</relationshipName>
    <type>Lookup</type>
</CustomField>