MODON MRE BPDEV/force-app/main/default/objects/Lead_Event__c/fields/MeetingNotes__c.field-meta.xml
<CustomField>
    <fullName>MeetingNotes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Meeting Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>