MODON MRE BPDEV/force-app/main/default/objects/Lead_Event__c/fields/Primary_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Primary_Mobile__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Primary Mobile</label>
    <type>Phone</type>
</CustomField>