MODON MRE BPDEV/force-app/main/default/objects/Lead_Event__c/fields/RegistrationType__c.field-meta.xml
<CustomField>
    <fullName>RegistrationType__c</fullName>
    <label>Registration Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Spot Registration</fullName>
            </value>
            <value>
                <fullName>Registration Form</fullName>
            </value>
            <value>
                <fullName>CSV</fullName>
            </value>
            <value>
                <fullName>CSV_INDIVIDUAL</fullName>
            </value>
            <value>
                <fullName>SALESFORCE</fullName>
            </value>
            <value>
                <fullName>DIRECT</fullName>
            </value>
            <value>
                <fullName>SPOT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>