MODON MRE BPDEV/force-app/main/default/objects/Lead_Event__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GUEST</fullName>
            </value>
            <value>
                <fullName>ATTENDEE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>