MODON MRE BPDEV/force-app/main/default/objects/Lead_Event__c/fields/RSVPTime__c.field-meta.xml
<CustomField>
    <fullName>RSVPTime__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>RSVP Time</label>
    <length>100</length>
    <type>Text</type>
</CustomField>