MODON MRE BPDEV/force-app/main/default/objects/Lead_Event__c/fields/SAEmail__c.field-meta.xml
<CustomField>
    <fullName>SAEmail__c</fullName>
    <formula>SalesAgent__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SAEmail</label>
    <type>Text</type>
</CustomField>