MODON MRE BPDEV/force-app/main/default/objects/Lead_Event__c/fields/SalesAgent__c.field-meta.xml
<CustomField>
    <fullName>SalesAgent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SalesAgent</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Lead_Events</relationshipName>
    <type>Lookup</type>
</CustomField>