MODON MRE BPDEV/force-app/main/default/objects/Lead_Event__c/fields/SalesAgentAssigned__c.field-meta.xml
<CustomField>
    <fullName>SalesAgentAssigned__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SalesAgentAssigned</label>
    <type>Checkbox</type>
</CustomField>