MODON MRE BPDEV/force-app/main/default/objects/Lead_Event__c/fields/SalesAgentEmail__c.field-meta.xml
<CustomField>
    <fullName>SalesAgentEmail__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>SalesAgentEmail</label>
    <type>Email</type>
</CustomField>