MODON MRE BPDEV/force-app/main/default/objects/Lead_Event__c/fields/SalesAgentMobile__c.field-meta.xml
<CustomField>
    <fullName>SalesAgentMobile__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>SalesAgentMobile</label>
    <type>Phone</type>
</CustomField>