MODON MRE BPDEV/force-app/main/default/objects/Lead_Event__c/fields/SalesAgentName__c.field-meta.xml
<CustomField>
    <fullName>SalesAgentName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>SalesAgentName</label>
    <length>100</length>
    <type>Text</type>
</CustomField>