MODON MRE BPDEV/force-app/main/default/objects/Lead_Event__c/fields/SAMobile__c.field-meta.xml
<CustomField>
    <fullName>SAMobile__c</fullName>
    <formula>SalesAgent__r.MobilePhone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SAMobile</label>
    <type>Text</type>
</CustomField>