MODON MRE BPDEV/force-app/main/default/objects/Lead_Event__c/fields/SAName__c.field-meta.xml
<CustomField>
    <fullName>SAName__c</fullName>
    <formula>SalesAgent__r.FirstName +&apos; &apos;+ SalesAgent__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SAName</label>
    <type>Text</type>
</CustomField>