MODON MRE BPDEV/force-app/main/default/objects/Lead_Event__c/fields/Secondary_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Mobile__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Secondary Mobile</label>
    <type>Phone</type>
</CustomField>