MODON MRE BPDEV/force-app/main/default/objects/Lead_Event__c/fields/Token_Number__c.field-meta.xml
<CustomField>
    <fullName>Token_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Token Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>