MODON MRE BPDEV/force-app/main/default/objects/Lead_Event__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>LeadID__c</columns>
    <columns>SalesAgentName__c</columns>
    <columns>Broker_Name__c</columns>
    <columns>Broker_UnifiedNumber__c</columns>
    <columns>Checkin_Status__c</columns>
    <columns>Checkin_Time__c</columns>
    <columns>FirstName__c</columns>
    <columns>LastName__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>